vlib/v/checker/tests/assign_blank_none_err.vv
fn main() {
	_ := none
	_ = none
}
